make promo block without burger and media

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,27 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-
+    <section class="promo">
+        <div class="container">
+            <h3 class="promo__subtitle title title_fz-16">Меня зовут Александра Смит</h3>
+            <h1 class="promo__title title title_fz-48">Я web-разработчик из города Москва</h1>
+            <div class="promo__links">
+                <a href="#" class="promo__link link link_btn">Портфолио</a>
+                <a href="#" class="promo__link link">Про меня</a>
+            </div>
+        </div>
+    </section>
+    <aside class="social-links">
+        <div class="social-links__text">
+            Социальные сети
+        </div>
+        <div class="social-links__divider"></div>
+        <a href="#" class="social-links__link"><img src="icons/social/github.svg" alt="github" class="social-links__img"></a>
+        <a href="#" class="social-links__link"><img src="icons/social/instagram.svg" alt="instagram" class="social-links__img"></a>
+        <a href="#" class="social-links__link"><img src="icons/social/facebook.svg" alt="facebook" class="social-links__img"></a>
+    </aside>
     <script src="js/script.js"></script>
 </body>
 </html>
+
+<!-- fz 48 36 20 16 14 -->
