--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,32 @@
 </head>
 <body>
     <section class="promo">
+        <div class="burger">
+            <div class="burger__item"></div>
+        </div>
+        <div class="menu">
+            <div class="menu__content">
+                <div class="menu__close">
+                    <img src="icons/menu/close.svg" alt="close" class="menu__close-img">
+                </div>
+                <nav class="menu__nav">
+                    <ul class="menu__items">
+                        <li class="menu__item"><a href="#" class="menu__link">ПРО МЕНЯ</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">МОЙ ОПЫТ</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">МОИ НАВЫКИ</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">МОИ РАБОТЫ</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">ПРАЙС-ЛИСТ</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">КОНТАКТЫ</a></li>
+                    </ul>
+                </nav>
+                <div class="menu__social">
+                    <a href="#" class="menu__social-link"><img src="icons/social/github.svg" alt="github" class="menu__social-img"></a>
+                    <a href="#" class="menu__social-link"><img src="icons/social/instagram.svg" alt="instagram" class="menu__social-img"></a>
+                    <a href="#" class="menu__social-link"><img src="icons/social/facebook.svg" alt="facebook" class="menu__social-img"></a>
+                </div>
+            </div>
+            <div class="menu__overlay"></div>
+        </div>
         <div class="container">
             <h3 class="promo__subtitle title title_fz-16">Меня зовут Александра Смит</h3>
             <h1 class="promo__title title title_fz-48">Я web-разработчик из города Москва</h1>
