--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,43 @@
         <a href="#" class="social-links__link"><img src="icons/social/instagram.svg" alt="instagram" class="social-links__img"></a>
         <a href="#" class="social-links__link"><img src="icons/social/facebook.svg" alt="facebook" class="social-links__img"></a>
     </aside>
+    <section class="about">
+        <div class="container">
+            <div class="about__wrap">
+                <div class="about__picture">
+                    <img src="img/main_photo.jpg" alt="мое фото" class="about__img">
+                </div>
+                <div class="about__info">
+                    <div class="about__info-item">
+                        <h3 class="about__subtitle title title_fz-16">Про меня</h3>
+                        <h2 class="about__title title title_fz-36">Меня зовут Александра</h2>
+                        <p class="about__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        </p>
+                    </div>
+                    <div class="about__info-item">
+                        <h4 class="about__skill-title title title_fz-14">Web-разработка</h4>
+                        <p class="about__skill-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="about__info-item">
+                        <h4 class="about__skill-title title title_fz-14">Разработка приложений</h4>
+                        <p class="about__skill-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="about__info-item">
+                        <h4 class="about__skill-title title title_fz-14">UI/UX Design</h4>
+                        <p class="about__skill-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
