--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             <div class="menu__overlay"></div>
         </div>
         <div class="container">
-            <h3 class="promo__subtitle title title_fz-16">Меня зовут Александра Смит</h3>
+            <h2 class="promo__subtitle title title_fz-16">Меня зовут Александра Смит</h2>
             <h1 class="promo__title title title_fz-48">Я web-разработчик из города Москва</h1>
             <div class="promo__links">
                 <a href="#" class="promo__link link link_btn">Портфолио</a>
@@ -97,8 +97,8 @@
                 </div>
                 <div class="about__info">
                     <div class="about__info-item">
-                        <h3 class="about__subtitle title title_fz-16">Про меня</h3>
-                        <h2 class="about__title title title_fz-36">Меня зовут Александра</h2>
+                        <h2 class="about__subtitle title title_fz-16">Про меня</h2>
+                        <div class="about__title title title_fz-36">Меня зовут Александра</div>
                         <p class="about__text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                         </p>
@@ -121,6 +121,52 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="exp">
+        <div class="container">
+            <h2 class="exp__subtitle title title_fz-16">Опыт</h2>
+            <div class="exp__title title title_fz-36">Чем я буду полезна</div>
+            <div class="exp__wrap">
+                <div class="exp__item">
+                    <h3 class="exp__item-title title title_fz-20">Образование</h3>
+                    <ul class="exp__list">
+                        <li class="exp__list-item">
+                            <div class="exp__list-header">
+                                <h4 class="exp__list-title title title_fz-14">МГТУ им. Н. Э. Баумана</h4>
+                                <div class="exp__list-descr">Диплом магистра | Москва (2014-2020)</div>
+                            </div>
+                            <div class="exp__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo.</div>
+                        </li>
+                        <li class="exp__list-item">
+                            <div class="exp__list-header">
+                                <h4 class="exp__list-title title title_fz-14">Udemy</h4>
+                                <div class="exp__list-descr">Курсы по Web-разработке</div>
+                            </div>
+                            <div class="exp__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo.</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="exp__item">
+                    <h3 class="exp__item-title title title_fz-20">Опыт работы</h3>
+                    <ul class="exp__list">
+                        <li class="exp__list-item">
+                            <div class="exp__list-header">
+                                <h4 class="exp__list-title title title_fz-14">Front-End Developer</h4>
+                                <div class="exp__list-descr">EPAM | Москва (2018-2019)</div>
+                            </div>
+                            <div class="exp__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo.</div>
+                        </li>
+                        <li class="exp__list-item">
+                            <div class="exp__list-header">
+                                <h4 class="exp__list-title title title_fz-14">UI/UX Designer</h4>
+                                <div class="exp__list-descr">Squad Team | Москва (2018)</div>
+                            </div>
+                            <div class="exp__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo.</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
