--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,8 @@
                 </div>
                 <div class="about__info">
                     <div class="about__info-item">
-                        <h2 class="about__subtitle title title_fz-16">Про меня</h2>
-                        <div class="about__title title title_fz-36">Меня зовут Александра</div>
+                        <h2 class="about__title title title_fz-16">Про меня</h2>
+                        <div class="about__subtitle title title_fz-36">Меня зовут Александра</div>
                         <p class="about__text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                         </p>
@@ -127,8 +127,8 @@
     </section>
     <section class="exp">
         <div class="container">
-            <h2 class="exp__subtitle title title_fz-16">Опыт</h2>
-            <div class="exp__title title title_fz-36">Чем я буду полезна</div>
+            <h2 class="exp__title title title_fz-16">Опыт</h2>
+            <div class="exp__subtitle title title_fz-36">Чем я буду полезна</div>
             <div class="exp__wrap">
                 <div class="exp__item">
                     <h3 class="exp__item-title title title_fz-20">Образование</h3>
@@ -167,6 +167,105 @@
                             <div class="exp__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo.</div>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="container">
+            <h2 class="skills__title title title_fz-16">Навыки</h2>
+            <div class="skills__subtitle title title_fz-36">Что я использую в работе</div>
+            <div class="skills__wrap">
+                <div class="skills__item">
+                    <img src="icons/skills/html5.svg" alt="html5" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">HTML5</h4>
+                    <p class="skills__text">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/css3.svg" alt="css3" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">CSS3</h4>
+                    <p class="skills__text">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</p>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/js.svg" alt="js" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">Java Script</h4>
+                    <p class="skills__text">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</p>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/jquery.svg" alt="jquery" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">Jquery</h4>
+                    <p class="skills__text">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</p>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/react.svg" alt="react" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">React</h4>
+                    <p class="skills__text">Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</p>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/node.js.svg" alt="nodeоы" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">Node.js</h4>
+                    <p class="skills__text">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</p>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/mongo.db.svg" alt="mongo" class="skills__item-img">
+                    <h4 class="skills__item-title title title_fz-14">Mongo.db</h4>
+                    <p class="skills__text">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</p>
+                </div>
+            </div>
+            <div class="skills__level-wrap">
+                <div class="skills__level-item">
+                    <div class="skills__level-info">
+                        <h4 class="skills__level-title">Создание сайтов</h4>
+                        <div class="skills__level-percent">100%</div>
+                    </div>
+                    <div class="skills__level-bar-bg">
+                        <div class="skills__level-bar-content"></div>
+                    </div>
+                </div>
+                <div class="skills__level-item">
+                    <div class="skills__level-info">
+                        <h4 class="skills__level-title">Создание приложений</h4>
+                        <div class="skills__level-percent">85%</div>
+                    </div>
+                    <div class="skills__level-bar-bg">
+                        <div class="skills__level-bar-content"></div>
+                    </div>
+                </div>
+                <div class="skills__level-item">
+                    <div class="skills__level-info">
+                        <h4 class="skills__level-title">Работа с данными</h4>
+                        <div class="skills__level-percent">90%</div>
+                    </div>
+                    <div class="skills__level-bar-bg">
+                        <div class="skills__level-bar-content"></div>
+                    </div>
+                </div>
+                <div class="skills__level-item">
+                    <div class="skills__level-info">
+                        <h4 class="skills__level-title">Креативность</h4>
+                        <div class="skills__level-percent">75%</div>
+                    </div>
+                    <div class="skills__level-bar-bg">
+                        <div class="skills__level-bar-content"></div>
+                    </div>
+                </div>
+                <div class="skills__level-item">
+                    <div class="skills__level-info">
+                        <h4 class="skills__level-title">Создание дизайна</h4>
+                        <div class="skills__level-percent">90%</div>
+                    </div>
+                    <div class="skills__level-bar-bg">
+                        <div class="skills__level-bar-content"></div>
+                    </div>
+                </div>
+                <div class="skills__level-item">
+                    <div class="skills__level-info">
+                        <h4 class="skills__level-title">Soft skills</h4>
+                        <div class="skills__level-percent">95%</div>
+                    </div>
+                    <div class="skills__level-bar-bg">
+                        <div class="skills__level-bar-content"></div>
+                    </div>
                 </div>
             </div>
         </div>
