--- a/src/index.html
+++ b/src/index.html
@@ -270,6 +270,102 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="portfolio__title title title_fz-16">Портфолио</h2>
+            <div class="portfolio__subtitle title title_fz-36">Мои работы</div>
+            <div class="portfolio__wrap">
+                <a href="#" class="portfolio__item"><img src="img/works/uber.jpg" alt="uber" class="portfolio__img"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/pulse.jpg" alt="pulse" class="portfolio__img"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/bread.jpg" alt="bread" class="portfolio__img"></a>
+                <a href="#" class="portfolio__item portfolio__item_vertical"><img src="img/works/plans.jpg" alt="plans" class="portfolio__img"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/ipad.jpg" alt="ipad" class="portfolio__img"></a>
+                <a href="#" class="portfolio__item portfolio__item_horizontal"><img src="img/works/mac.jpg" alt="mac" class="portfolio__img"></a>
+            </div>
+        </div>
+    </section>
+    <section class="price">
+        <div class="container">
+            <h2 class="price__title title title_fz-16">Прайс-лист</h2>
+            <div class="price__wrap">
+                <div class="price__column">
+                    <div class="price__item">
+                        <h4 class="price__item-title title title_fz-14">Landing-page</h4>
+                        <div class="price__item-price">от 8000 руб.</div>
+                        <div class="price__item-descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                    </div>
+                    <div class="price__item">
+                        <h4 class="price__item-title title title_fz-14">Корпоративный сайт</h4>
+                        <div class="price__item-price">от 20000 руб.</div>
+                        <div class="price__item-descr">Сайт для вашего бизнеса или компании</div>
+                    </div>
+                    <div class="price__item">
+                        <h4 class="price__item-title title title_fz-14">Интернет-магазин</h4>
+                        <div class="price__item-price">от 30000 руб.</div>
+                        <div class="price__item-descr">Инструмент для ваших продаж в сети</div>
+                    </div>
+                </div>
+                <div class="price__column">
+                    <div class="price__item">
+                        <h4 class="price__item-title title title_fz-14">Web-приложение</h4>
+                        <div class="price__item-price">от 28000 руб.</div>
+                        <div class="price__item-descr">Приложение внутри браузера для лучшего комфорта</div>
+                    </div>
+                    <div class="price__item">
+                        <h4 class="price__item-title title title_fz-14">Android/IOS Приложение</h4>
+                        <div class="price__item-price">от 25000 руб.</div>
+                        <div class="price__item-descr">Приложение для смартфона любой ОС</div>
+                    </div>
+                    <div class="price__item">
+                        <h4 class="price__item-title title title_fz-14">Дизайн</h4>
+                        <div class="price__item-price">Индивидуально</div>
+                        <div class="price__item-descr">Создам дизайн для вашего сайта/приложения...</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrap">
+                <div class="contacts__picture">
+                    <img src="img/main_photo.jpg" alt="мое фото" class="contacts__img">
+                </div>
+                <div class="contacts__info">
+                    <h2 class="contacts__title title title_fz-16">Контакты</h2>
+                    <div class="contacts__subtitle title title_fz-36">Свяжитесь со мной</div>
+                    <div class="contacts__text">Любым удобным для вас способом:</div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__social-link"><img src="icons/social/facebook.svg" alt="facebook" class="contacts__social-img"></a>
+                        <a href="#" class="contacts__social-link"><img src="icons/social/telegram.svg" alt="telegram" class="contacts__social-img"></a>
+                        <a href="#" class="contacts__social-link"><img src="icons/social/instagram.svg" alt="instagram" class="contacts__social-img"></a>
+                    </div>
+                    <div class="contacts__text">Или оставьте ваши данные и я сама вам напишу:</div>
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input-wrap">
+                            <label class="contacts__label" for="name">Ваше имя</label>
+                            <input required class="contacts__input" type="text" id="name" name="name">
+                        </div>
+                        <div class="contacts__input-wrap">
+                            <label class="contacts__label" for="email">Ваша почта</label>
+                            <input required class="contacts__input" type="email" id="email" name="email">
+                        </div>
+                        <div class="contacts__textarea-wrap">
+                            <label class="contacts__label" for="textarea">Ваше сообщение</label>
+                            <textarea class="contacts__textarea" name="comment" id="textarea"></textarea>
+                        </div>
+                        <div class="contacts__btn-wrap">
+                            <button class="contacts__btn">Отправить сообщение</button>
+                            <div class="contacts__privacy">
+                                <input required type="checkbox" name="privacy" id="privacy">
+                                <span class="contacts__privacy-text">Я согласен(а) с <a href="privacy.html" class="contacts__privacy-link" target="_blank">политикой конфиденциальности</a></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
