--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
         <a href="#" class="social-links__link"><img src="icons/social/instagram.svg" alt="instagram" class="social-links__img"></a>
         <a href="#" class="social-links__link"><img src="icons/social/facebook.svg" alt="facebook" class="social-links__img"></a>
     </aside>
-    <section class="about">
+    <!-- <section class="about">
         <div class="container">
             <div class="about__wrap">
                 <div class="about__picture">
@@ -124,8 +124,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="exp">
+    </section> -->
+    <!-- <section class="exp">
         <div class="container">
             <h2 class="exp__title title title_fz-16">Опыт</h2>
             <div class="exp__subtitle title title_fz-36">Чем я буду полезна</div>
@@ -170,8 +170,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="skills">
+    </section> -->
+    <!-- <section class="skills">
         <div class="container">
             <h2 class="skills__title title title_fz-16">Навыки</h2>
             <div class="skills__subtitle title title_fz-36">Что я использую в работе</div>
@@ -269,8 +269,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="portfolio">
+    </section> -->
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="portfolio__title title title_fz-16">Портфолио</h2>
             <div class="portfolio__subtitle title title_fz-36">Мои работы</div>
@@ -283,8 +283,8 @@
                 <a href="#" class="portfolio__item portfolio__item_horizontal"><img src="img/works/mac.jpg" alt="mac" class="portfolio__img"></a>
             </div>
         </div>
-    </section>
-    <section class="price">
+    </section> -->
+    <!-- <section class="price">
         <div class="container">
             <h2 class="price__title title title_fz-16">Прайс-лист</h2>
             <div class="price__wrap">
@@ -324,8 +324,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="contacts">
+    </section> -->
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrap">
                 <div class="contacts__picture">
@@ -365,7 +365,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <script src="js/script.js"></script>
 </body>
