add MEDIA 2nd block

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
         <a href="#" class="social-links__link"><img src="icons/social/instagram.svg" alt="instagram" class="social-links__img"></a>
         <a href="#" class="social-links__link"><img src="icons/social/facebook.svg" alt="facebook" class="social-links__img"></a>
     </aside>
-    <!-- <section class="about">
+    <section class="about">
         <div class="container">
             <div class="about__wrap">
                 <div class="about__picture">
@@ -124,7 +124,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="exp">
         <div class="container">
             <h2 class="exp__title title title_fz-16">Опыт</h2>
