add MEDIA 3rd and 4th blocks

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="exp">
+    <section class="exp">
         <div class="container">
             <h2 class="exp__title title title_fz-16">Опыт</h2>
             <div class="exp__subtitle title title_fz-36">Чем я буду полезна</div>
@@ -170,8 +170,8 @@
                 </div>
             </div>
         </div>
-    </section> -->
-    <!-- <section class="skills">
+    </section>
+    <section class="skills">
         <div class="container">
             <h2 class="skills__title title title_fz-16">Навыки</h2>
             <div class="skills__subtitle title title_fz-36">Что я использую в работе</div>
@@ -269,7 +269,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="portfolio">
         <div class="container">
             <h2 class="portfolio__title title title_fz-16">Портфолио</h2>
