add MEDIA other blocks (not complite)

--- a/src/index.html
+++ b/src/index.html
@@ -270,7 +270,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <h2 class="portfolio__title title title_fz-16">Портфолио</h2>
             <div class="portfolio__subtitle title title_fz-36">Мои работы</div>
@@ -283,8 +283,8 @@
                 <a href="#" class="portfolio__item portfolio__item_horizontal"><img src="img/works/mac.jpg" alt="mac" class="portfolio__img"></a>
             </div>
         </div>
-    </section> -->
-    <!-- <section class="price">
+    </section>
+    <section class="price">
         <div class="container">
             <h2 class="price__title title title_fz-16">Прайс-лист</h2>
             <div class="price__wrap">
@@ -324,7 +324,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrap">
