--- a/src/index.html
+++ b/src/index.html
@@ -325,7 +325,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="contacts">
+    <section class="contacts">
         <div class="container">
             <div class="contacts__wrap">
                 <div class="contacts__picture">
@@ -365,7 +365,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <script src="js/script.js"></script>
 </body>
